Fix spacing and styling on Funds activity page on desktop and tablet

--- a/src/scss/_funds_activity.scss
+++ b/src/scss/_funds_activity.scss
@@ -57,7 +57,7 @@
 
         &__number {
             margin-left: 9px;
-            font-size: 1.2rem;
+            font-size: 24px;
             font-weight: 700;
         }
 
@@ -70,8 +70,7 @@
     &__body {
         display: flex;
         flex-direction: column;
-        width: 64%;
-        gap: 10px;
+        justify-content: space-between;
 
         .ellipse {
             width: 8px;
@@ -83,7 +82,7 @@
 
         .description {
             font-size: 14px;
-            line-height: 1.5;
+            line-height: 25.6px;
             color: $black;
         }
     }
@@ -114,6 +113,15 @@
     display: none;
 }
 
+@media only screen and (min-width: 1331px) {
+    .funds_act_entry__body {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+    }
+}
+
 @media only screen and (max-width: 1330px) {
     .funds_act_entry-tab {
         padding: 20px;
@@ -122,6 +130,7 @@
 
         .funds_act_entry__body {
             padding-left: 65px;
+            gap: 5px;
 
             .funds_act_entry__amount__container {
                 min-width: 80px;
@@ -134,6 +143,7 @@
 
             .funds_act_entry__amount__number {
                 margin-left: 5px;
+                font-size: 16px;
             }
         }
 
