--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -512,13 +512,12 @@ p {
 
     .funds_act_entry {
         padding: 0;
-        margin-bottom: 26px;
+        margin-bottom: 32px;
         border: none;
         border-radius: 0;
         position: relative;
 
         &__amount__container {
-            width: 80%;
 
             .type-label {
                 margin-left: 16px;
@@ -527,12 +526,8 @@ p {
         }
 
         &__body {
-            position: absolute;
-            top: 5px;
-            right: 0;
             display: flex;
             align-items: flex-end;
-            gap: 8px;
             justify-content: space-between;
         }
 
@@ -553,6 +548,7 @@ p {
 .section_container {
     margin: 80px 0 20px 0;
 }
+
 @media only screen and (min-width: 650px) and (max-width: 1330px) {
     .section_container {
         margin-top: 40px;
@@ -602,6 +598,10 @@ p {
 .s-16 {
     width: 16px;
     height: 16px;
+}
+
+.h-100 {
+    height: 100%;
 }
 
 .w-100 {
